Ajout de nouveaux fichiers DTO, mise à jour des contrôleurs, suppression de certains fichiers obsolètes